--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="style.css" />
     <title>Document</title>
   </head>
-  <body>
-    <h1>hello microverse</h1>
+  <body>Hello Microverse!</h1>
   </body>
 </html>
